--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -31,7 +31,7 @@
               @if (isLoggined) {
                 <li><a class="dropdown-item" routerLink="/profile">Profile</a></li>
                 <li><a class="dropdown-item" routerLink="/saved-recipes">Saved Recipes</a></li>
-                <li><a class="dropdown-item">LogOut</a></li>             
+                <li><a (click)="logout()" class="dropdown-item">LogOut</a></li>             
   
               }@else {
                 <li><a class="dropdown-item" routerLink="/login">Login</a></li>
