--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -84,3 +84,5 @@
     </div>
     <iframe class="my-5" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3928.9816323402188!2d76.33999950974678!3d10.018374072678686!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b080ffce877d5ef%3A0x8bef6870ad11b98!2sLuminar%20Technolab%2C%20Python%2C%20MERN%20stack%2C%20Software%20Testing%2C%20Data%20science%2C%20Artificial%20intelligence%2C%20asp.net%20training%20in%20kochi!5e0!3m2!1sen!2sin!4v1731479494457!5m2!1sen!2sin" width="1100" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </div>
+<!-- footer -->
+<app-footer></app-footer>
