--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,1 +1,14 @@
-<p>profile works!</p>
+<app-header></app-header>
+<div style="height: 80vh;" class="d-flex align-items-center justify-content-center">
+
+    <div class="rounded border p-5 shadow d-flex flex-column">
+        <h1 class="text-warning mb-2 text-center">Profile</h1>
+        <label>
+            <input (change)="getFile($event)" style="display: none;" type="file">
+            <img width="200px" height="200" class="rounded-circle" [src]="profileImage" alt="">
+        </label>
+        <button (click)="editUser()" class="btn btn-success mt-3">Upload</button>
+    </div>
+</div>
+<!-- footer -->
+<app-footer></app-footer>
