--- a/src/app/saved-recipes/saved-recipes.component.html
+++ b/src/app/saved-recipes/saved-recipes.component.html
@@ -1,1 +1,25 @@
-<p>saved-recipes works!</p>
+<app-header></app-header>
+<div class="container my-5">
+    <h1 class="text-warning">Your Saved recipe Collection</h1>
+    <div class="row my-5">
+        @if (allRecipes.length>0) {
+            @for (recipe of allRecipes; track $index) {
+                <div class="col-lg-3">
+                    <div class="p-3">
+                        <img routerLink="/recipes/{{recipe.recipeId}}/view" [src]="recipe.image" class="card-img-top rounded" alt="...">
+                        <div class="card-body d-flex justify-content-between mt-2">
+                            <h5 class="card-title">{{recipe.name}}</h5>
+                            <button (click)="removeSaveRecipe(recipe._id)" class="btn"> <i class="fa-solid fa-trash text-danger"></i> </button>
+                        </div>
+                    </div>
+                </div>
+            }
+        }@else {
+            <div class="fw-bolder text-danger fs-3 text-center">
+                Your recipe collection is Empty... Add More!!!
+            </div>
+        }
+    </div>
+</div>
+<!-- footer -->
+<app-footer></app-footer>
